Reinicializando repositório com novos arquivos

--- a/dashboard.html
+++ b/dashboard.html
@@ -1120,7 +1120,7 @@
                         <button onclick="openProfileModal()" style="background: none; border: none; color: var(--texto); text-decoration: none; padding: 0.75rem 1rem; border-radius: 10px; transition: all 0.3s ease; width: 100%; text-align: left; font-family: inherit; cursor: pointer; font-size: 1rem; margin-bottom: 0.5rem;">
                             <i class="fas fa-user"></i> Meu Perfil
                         </button>
-                        <a href="submit-news.html" style="background: none; border: none; color: var(--texto); text-decoration: none; padding: 0.75rem 1rem; border-radius: 10px; transition: all 0.3s ease; width: 100%; text-align: left; font-family: inherit; cursor: pointer; font-size: 1rem; margin-bottom: 0.5rem; display: block;">
+                        <a href="submit-news-dynamic.html" style="background: none; border: none; color: var(--texto); text-decoration: none; padding: 0.75rem 1rem; border-radius: 10px; transition: all 0.3s ease; width: 100%; text-align: left; font-family: inherit; cursor: pointer; font-size: 1rem; margin-bottom: 0.5rem; display: block;">
                             <i class="fas fa-plus-circle"></i> Enviar Conteúdo
                         </a>
                         <button id="logoutBtn">
